--- a/server/package.json
+++ b/server/package.json
@@ -22,5 +22,8 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0"
   }
 }
